--- a/templates/header.html
+++ b/templates/header.html
@@ -2,5 +2,18 @@
     <head>
         <title>pgbench-tools results</title>
     </head>
+<style>
+.latency:hover{
+width:200px;
+height:100px;
+transition: .5s all;
+}
+
+.latency{
+transition: .5s all;
+}
+
+
+</style>
     <body>
         <div id="tabs">
